Reorder and retitle the collection guides

--- a/_data/overviews.yml
+++ b/_data/overviews.yml
@@ -2,53 +2,6 @@
 - category: Standard Library
   description: "Guides and overviews covering the Scala standard library."
   overviews:
-    - title: Collections
-      by: Martin Odersky
-      icon: sitemap
-      url: "collections/introduction.html"
-      description: "Scala's Collection Library."
-      subdocs:
-        - title: Introduction
-          url: "collections/introduction.html"
-        - title: Mutable and Immutable Collections
-          url: "collections/overview.html"
-        - title: Trait Traversable
-          url: "collections/trait-traversable.html"
-        - title: Trait Iterable
-          url: "collections/trait-iterable.html"
-        - title: The sequence traits Seq, IndexedSeq, and LinearSeq
-          url: "collections/seqs.html"
-        - title: Sets
-          url: "collections/sets.html"
-        - title: Maps
-          url: "collections/maps.html"
-        - title: Concrete Immutable Collection Classes
-          url: "collections/concrete-immutable-collection-classes.html"
-        - title: Concrete Mutable Collection Classes
-          url: "collections/concrete-mutable-collection-classes.html"
-        - title: Arrays
-          url: "collections/arrays.html"
-        - title: Strings
-          url: "collections/strings.html"
-        - title: Performance Characteristics
-          url: "collections/performance-characteristics.html"
-        - title: Equality
-          url: "collections/equality.html"
-        - title: Views
-          url: "collections/views.html"
-        - title: Iterators
-          url: "collections/iterators.html"
-        - title: Creating Collections From Scratch
-          url: "collections/creating-collections-from-scratch.html"
-        - title: Conversions Between Java and Scala Collections
-          url: "collections/conversions-between-java-and-scala-collections.html"
-        - title: Migrating from Scala 2.7
-          url: "collections/migrating-from-scala-27.html"
-    - title: The Architecture of Scala Collections
-      icon: building
-      url: "core/architecture-of-scala-collections.html"
-      by: Martin Odersky and Lex Spoon
-      description: "These pages describe the architecture of the Scala collections framework in detail. Compared to the Collections API you will find out more about the internal workings of the framework. You will also learn how this architecture helps you define your own collections in a few lines of code, while reusing the overwhelming part of collection functionality from the framework."
     - title: Scala 2.13’s Collections
       by: Martin Odersky and Julien Richard-Foy
       icon: sitemap
@@ -102,6 +55,53 @@
       url: "core/custom-collection-operations.html"
       by: Julien Richard-Foy
       description: "This guide shows how to write operations that can be applied to any collection type and return the same collection type, and how to write operations that can be parameterized by the type of collection to build."
+    - title: Scala 2.8 to 2.12’s Collections
+      by: Martin Odersky
+      icon: sitemap
+      url: "collections/introduction.html"
+      description: "Scala's Collection Library."
+      subdocs:
+        - title: Introduction
+          url: "collections/introduction.html"
+        - title: Mutable and Immutable Collections
+          url: "collections/overview.html"
+        - title: Trait Traversable
+          url: "collections/trait-traversable.html"
+        - title: Trait Iterable
+          url: "collections/trait-iterable.html"
+        - title: The sequence traits Seq, IndexedSeq, and LinearSeq
+          url: "collections/seqs.html"
+        - title: Sets
+          url: "collections/sets.html"
+        - title: Maps
+          url: "collections/maps.html"
+        - title: Concrete Immutable Collection Classes
+          url: "collections/concrete-immutable-collection-classes.html"
+        - title: Concrete Mutable Collection Classes
+          url: "collections/concrete-mutable-collection-classes.html"
+        - title: Arrays
+          url: "collections/arrays.html"
+        - title: Strings
+          url: "collections/strings.html"
+        - title: Performance Characteristics
+          url: "collections/performance-characteristics.html"
+        - title: Equality
+          url: "collections/equality.html"
+        - title: Views
+          url: "collections/views.html"
+        - title: Iterators
+          url: "collections/iterators.html"
+        - title: Creating Collections From Scratch
+          url: "collections/creating-collections-from-scratch.html"
+        - title: Conversions Between Java and Scala Collections
+          url: "collections/conversions-between-java-and-scala-collections.html"
+        - title: Migrating from Scala 2.7
+          url: "collections/migrating-from-scala-27.html"
+    - title: The Architecture of Scala 2.8 to 2.12’s Collections
+      icon: building
+      url: "core/architecture-of-scala-collections.html"
+      by: Martin Odersky and Lex Spoon
+      description: "These pages describe the architecture of the Scala collections framework in detail. Compared to the Collections API you will find out more about the internal workings of the framework. You will also learn how this architecture helps you define your own collections in a few lines of code, while reusing the overwhelming part of collection functionality from the framework."
 
 - category: Language
   description: "Guides and overviews covering features in the Scala language."
