This is to add the skeleton of translatable glossary, and the fix of zh-cn for issue#1224.

--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,9 @@ collections:
   tutorials:
     output: true
     permalink: /:collection/:path.html
+  glossary:
+    output: true
+    permalink: /:collection/:path.html
   sips:
     output: true
     permalink: /:collection/:path.html
