Initial commit of the ‘Hello, Scala’ book contents. I added a link to the book contents under the Learn menu as an initial starting point.

--- a/_data/doc-nav-header.yml
+++ b/_data/doc-nav-header.yml
@@ -18,6 +18,8 @@
       url: "/tutorials/scala-for-java-programmers.html"
     - title: Online Resources
       url: "/learn.html"
+    - title: “Hello, Scala” Book
+      url: "/overviews/hello-scala/introduction.html"
 - title: Reference
   url: "#"
   submenu:
