Move "Getting Started" and sub pages into collection, so that it site.documents finds them.

--- a/_config.yml
+++ b/_config.yml
@@ -37,6 +37,9 @@ collections:
     permalink: /:collection/:path.html
   books:
     output: false
+  getting-started:
+    output: true
+    permalink: /:collection/:path.html
   ja: # Japanese translations
     output: true
     permalink: /:collection/:path.html
